# TermColor

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  STATUS.md
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/dominantcolor/: CMakeLists.txt  DominantColor.cpp  DominantColor.h
src/backend/exception/: CMakeLists.txt  Exception.h
src/backend/writer/: CMakeLists.txt  KonsoleWriter.cpp  KonsoleWriter.h  Writer.cpp  Writer.h
src/backend/writer/gnometerminalwriter/: CMakeLists.txt  GnomeTerminalWriter.cpp  GnomeTerminalWriter.h
src/backend/writer/jsonwriter/: CMakeLists.txt  JsonWriter.cpp  JsonWriter.h
src/backend/writer/konsolewriter/: CMakeLists.txt  KonsoleWriter.cpp  KonsoleWriter.h
src/backend/writer/lxterminalwriter/: CMakeLists.txt  LXTerminalWriter.cpp  LXTerminalWriter.h
src/backend/writer/xfce4terminalwriter/: CMakeLists.txt  Xfce4TerminalWriter.cpp  Xfce4TerminalWriter.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/gui/controller/: CMakeLists.txt
src/gui/controller/colorscontroller/: CMakeLists.txt  ColorsController.cpp  ColorsController.h
src/gui/controller/terminalscontroller/: CMakeLists.txt  TerminalsController.cpp  TerminalsController.h
src/gui/model/: CMakeLists.txt
src/gui/model/colorsmodel/: CMakeLists.txt  ColorsModel.cpp  ColorsModel.h
src/gui/model/terminalsmodel/: CMakeLists.txt  TerminalsModel.cpp  TerminalsModel.h
src/gui/utils/: Application.cpp  Application.h  CMakeLists.txt
src/gui/widget/bgfgchooser/: BGFGChooser.cpp  BGFGChooser.h  CMakeLists.txt
src/gui/widget/colorbutton/: CMakeLists.txt  ColorButton.cpp  ColorButton.h
src/gui/widget/colorstablewidget/: CMakeLists.txt  ColorsTableWidget.cpp
src/gui/widget/displaywidget/: CMakeLists.txt  DisplayWidget.cpp
src/gui/widget/droparea/: CMakeLists.txt  DropArea.cpp  DropArea.h
src/gui/widget/exportwidget/: CMakeLists.txt  ExportWidget.cpp  ExportWidget.h
src/gui/widget/imagedropwidget/: CMakeLists.txt  ImageDropWidget.cpp  ImageDropWidget.h
src/ui/: CMakeLists.txt
src/ui/gui/: CMakeLists.txt  ColorButton.cpp  ColorButton.h  ColorsTableWidget.cpp  MainWindow.cpp  MainWindow.h
src/ui/gui/application/: Application.cpp  Application.h  CMakeLists.txt
src/ui/gui/bgfgchooser/: BGFGChooser.h  CMakeLists.txt
src/ui/gui/colorbutton/: CMakeLists.txt  ColorButton.cpp  ColorButton.h
src/ui/gui/colorstablewidget/: CMakeLists.txt  ColorsTableWidget.cpp  ColorsTableWidget.h
src/ui/gui/displaywidget/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.h
src/ui/gui/droparea/: CMakeLists.txt  DropArea.cpp  DropArea.h
src/ui/gui/exportwidget/: CMakeLists.txt  ExportWidget.cpp  ExportWidget.h
src/ui/gui/guimodel/: CMakeLists.txt  GuiModel.cpp  GuiModel.h
src/ui/gui/imagedropwidget/: CMakeLists.txt  ImageDropWidget.cpp  ImageDropWidget.h
src/ui/gui/model/colorsmodel/: CMakeLists.txt  ColorsModel.cpp  ColorsModel.h
src/ui/gui/model/terminalsmodel/: CMakeLists.txt  TerminalsModel.cpp  TerminalsModel.h
src/ui/gui/widget/: CMakeLists.txt
src/ui/gui/widget/bgfgchooser/: BGFGChooser.cpp  BGFGChooser.h  CMakeLists.txt
src/ui/gui/widget/colorbutton/: CMakeLists.txt  ColorButton.cpp  ColorButton.h
src/ui/gui/widget/colorstablewidget/: CMakeLists.txt  ColorsTableWidget.cpp  ColorsTableWidget.h
src/ui/gui/widget/displaywidget/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.h
src/ui/gui/widget/droparea/: CMakeLists.txt  DropArea.cpp  DropArea.h
src/ui/gui/widget/exportwidget/: CMakeLists.txt  ExportWidget.cpp  ExportWidget.h
src/ui/gui/widget/imagedropwidget/: CMakeLists.txt  ImageDropWidget.cpp
tests/backend/: CMakeLists.txt
tests/backend/dominantcolor/: CMakeLists.txt  DominantColorTest.cpp  DominantColorTest.h
